# labs

./: README.md
System-Design/: system_architecture_overview.md
lab-2/: ARCHITECTURE-DIAGRAMS.md  QUICK-REFERENCE.md  README.md
lab-3/: EXECUTION-GUIDE.md  QUICK-REFERENCE.md  README.md  modern-production-practices-part2.md  modern-production-practices.md  modern-vs-traditional.md  terraform-aws-guide-part2.md  terraform-aws-guide-part3.md  terraform-aws-guide-part4.md  terraform-aws-guide-part5.md  terraform-aws-guide-part6.md  terraform-aws-guide.md
lab-4.1/: .gitignore  PROJECT-SUMMARY.md  README.md
lab-5-v1/: README.md  cost-optimization.md  dr-tiers-rpo-rto.md  failover-mechanisms.md  implementation-steps.md  multi-cloud-dr-architecture.md  security-compliance.md  testing-strategy.md  tools-technologies.md
lab-6/: .gitignore  Makefile  README.md  requirements.txt
lab-ansible-playbooks/: .gitignore  README.md  ansible.cfg  requirements.yml
lab-depoymentsv.1/: ADVANCED_CICD_IMPLEMENTATION.md  BEST_PRACTICES.md  DEPLOYMENT_GUIDE_COMPLETE.md  README.md  REAL_WORLD_EXAMPLES.md  TROUBLESHOOTING.md
lab-hot-cold/: ARCHITECTURE.md  COLD_STORAGE_CONFIG.md  DATA_FORMAT_GUIDE.md  MONGODB_COMMUNITY_SETUP.md  QUICKSTART.md  (+4 more)
lab-mcp-server/: .gitignore  DEVELOPER_GUIDE.md  README.md  pyproject.toml  verify_setup.py
lab-mcp-server/src/lab_mcp_server/: __main__.py  server.py
lab-mcp-server/src/lab_mcp_server/prompts/: code_review.py
lab-mcp-server/src/lab_mcp_server/resources/: __init__.py  system_info.py
lab-mcp-server/src/lab_mcp_server/tools/: calculator.py
(+1110 files in other folders)
