[project]
name = "lab-mcp-server"
version = "0.1.0"
description = "A comprehensive example of an MCP server implementation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
lab-mcp-server = "lab_mcp_server:main"
